--- a/manifest.json
+++ b/manifest.json
@@ -22,6 +22,7 @@
 
     "content_scripts": [
     {
+      "matches": ["https://www.google.com/*"],
       "js": ["jquery-1.11.3.min.js", "content.js"]
     }
     ]
